--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="title_notification">Notification</string>
     <string name="title_profile">Profile</string>
     <string name="title_other">Other</string>
+
+    <string name="title_activity_fullscreen_exam">FullscreenExamActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
