--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="location_title">Select your state and city</string>
-    <string name="personal_info">Set your name,gender and preferred exam location</string>
+    <string name="personal_info">Set your profile photo</string>
     <string name="exam_location">Select preferred exam location</string>
     <string name="mobile_varification">Enter mobile number and set login password</string>
     <string name="required_mobile">Mobile number required for receiving OTP</string>
