1.photo upload issue sorted 2.push notifications implemented 3.edit exam center 4.select profile photo shifted to std profile 5.Preffered exam language section done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="location_title">Select your state and city</string>
     <string name="personal_info">Set your profile photo</string>
     <string name="exam_location">Select preferred exam location</string>
+    <string name="exam_language">Select preferred exam language</string>
     <string name="mobile_varification">Enter mobile number and set login password</string>
     <string name="required_mobile">Mobile number required for receiving OTP</string>
     <string name="note">Login credentials will be sent on registered mobile number after successfull registration</string>
