--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">VVMExam</string>
+    <string name="vvm_title">Vidyarthi Vigyan Manthan \n 2018-19</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -7,6 +8,7 @@
     <string name="personal_info">Set your profile photo</string>
     <string name="exam_location">Select preferred exam location</string>
     <string name="exam_language">Select preferred exam language</string>
+    <string name="contact">For more details contact our State Coordinators</string>
     <string name="mobile_varification">Enter mobile number and set login password</string>
     <string name="required_mobile">Mobile number required for receiving OTP</string>
     <string name="note">Login credentials will be sent on registered mobile number after successfull registration</string>
@@ -25,4 +27,9 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
     <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="update_app">A new version of VVM Exam app is available on playstore.
+        Please update the app now to avail the latest features and to proceed further.</string>
+    <string name="profile_photo_warning">Profile photo already set.Can not update.</string>
+
+
 </resources>
